<resources>
    <string name="app_name">Notification</string>

    <string name="cta_dialog_title">网络加速需要以下权限</string>
    <string name="cta_dialog_message_net_title">访问移动网络</string>
    <string name="cta_dialog_message_net_content">网络加速时效检查时，需要联网获取相关信息</string>
    <string name="cta_dialog_message_vpn_title">获取设备信息</string>
    <string name="cta_dialog_message_vpn_content">加速服务需要对设备进行网络加速，需要设备信息</string>
    <string name="cta_dialog_message_games_title">读取应用列表</string>
    <string name="cta_dialog_message_games_content">加速服务检查已安装游戏是否支持网络加速服务，需要读取应用列表</string>
    <string name="dilaog_sure">确定</string>
    <string name="dilaog_not_present">不再提示</string>

    <string name="menu_action_all_down">All down</string>
    <string name="menu_action_up_down">Up down</string>
    <string name="menu_action_up_down_stack">Up down stack</string>

    <string name="com_lenovo_pay_order_coupon">优惠券抵扣</string>
    <string name="com_lenovo_pay_order_v">V币抵扣</string>
    <string name="com_lenovo_pay_order_charge">应付金额</string>
    <string name="com_lenovo_pay_select_pay_type">选择支付方式</string>
    <string name="com_lenovo_pay_type_weixin">微信支付</string>
    <string name="com_lenovo_pay_type_ali">支付宝</string>
    <string name="com_lenovo_pay_type_szf">手机充值卡</string>
    <string name="com_lenovo_pay_immediate">立即支付</string>
    <string name="com_lenovo_pay_select_coupon">我的优惠券</string>
    <string name="com_lenovo_pay_no_use_coupon">不使用优惠券</string>
    <string name="com_lenovo_pay_coupon_warning">温馨提示：使用满减券后将不能与其他优惠活</string>
    <string name="com_lenovo_pay_no_coupons">暂无可使用的优惠券</string>
    <string name="com_lenovo_pay_coupon_item_limit">无金额门槛</string>
    <string name="com_lenovo_lsf_pay_charge_success">支付成功</string>
    <string name="com_lenovo_lsf_pay_charge_error">道具购买失败，支付金额已转为V币存入您的账户</string>
    <string name="com_lenovo_pay_qr_title">扫码支付</string>
    <string name="com_lenovo_pay_qr_tip">打开手机支付宝扫一扫付款</string>
    <string name="com_lenovo_pay_qr_error">二维码生成失败</string>
    <string name="com_lenovo_pay_qr_refresh">刷新</string>
    <string name="com_lenovo_pay_card_input_info">请填写卡号和密码</string>
    <string name="com_lenovo_pay_card_number">充值卡卡号</string>
    <string name="com_lenovo_pay_card_passw">充值卡密码</string>


    <string name="pay_name_weixin">微信</string>

    <string name="pay_center_title">支付中心</string>
    <string name="pay_order_info">订单信息</string>
    <string name="pay_order_payment">支付方式</string>
    <string name="pay_order_confirm">确定支付</string>
    <string name="pay_order_v_coin">%1$sV币</string>

    <string name="pay_coupon_used">%1$s个可用</string>
    <string name="pay_detials_info">付款详情</string>
    <string name="pay_select_coupon">选择优惠券</string>
    <string name="pay_coupon_warning">温馨提示：使用满减券后将不能与其他优惠活</string>
    <string name="pay_rmb_cny">¥</string>
    <string name="pay_rmb_cny_number">¥%1$s</string>
    <string name="pay_coupon_details">优惠券详情</string>
    <string name="pay_coupon_item_balance">¥%1$s剩余</string>
    <string name="pay_coupon_item_limit">面额：%1$s元</string>
    <string name="pay_coupon_unuse">不可使用</string>
    <string name="pay_type_warning">优先使用所选付款方式，如付款失败将尝试使用其他方式完成付款</string>
    <string name="pay_card_limit_title">充值卡面额选择</string>
    <string name="pay_card_limit_account">账号：%1$s</string>
    <string name="pay_card_limit_balance">(余额：%1$s)</string>
    <string name="pay_card_limit_hint">请选择充值卡面额（1元=10V币）</string>
    <string name="pay_card_next">下一步</string>
    <string name="pay_card_input_hint">温馨提示：本次支付完成后，%1$s会存入你的账户</string>
    <string name="pay_card_input_limit_hint">剩余金额%1$sV币</string>
    <string name="pay_card_input_warning">注意：如果充值卡与所选金额不一致会导致卡内金额丢失</string>
    <string name="pay_card_input_limit">充值金额</string>
    <string name="pay_card_number">序列号</string>
    <string name="pay_card_passwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="pay_card_number_hint">请输入充值卡序列号</string>
    <string name="pay_card_passwd_hint">请输入充值卡密码</string>
    <string name="pay_card_input_immediate">立即支付</string>
    <string name="title_websocket">Module Title</string>


    <string name="title_name">演讲稿又叫演说词，它是在大会上或其他公开场合发表个人的观点、见解和主张的文稿。演讲稿的好坏直接决定了演讲的成功与失败。
演讲稿像议论文一样论点鲜明、逻辑性强、富有特点，但它又不是一般的议论文。它是一种带有宣传性和鼓动性的应用文体，经常使用各种修辞手法和艺术手法，具有较强的感染力。
演讲未必都使用演讲稿，不少著名的演讲都是即兴之作，由别人经过记录流传开来的。但重要的演讲最好还是事先准备好演讲稿，因为演讲稿至少有两个方面的作用：其一，通过对思路的精心梳理，对材料的精心组织，使演讲内容更加深刻和富有条理。其二，可帮助演讲者消除临场紧张、恐惧的心理，增强演讲者的自信心。
特点编辑
主要区别
演讲和表演、作文有很大的区别。
演讲又称演说、讲演，是指一个人在较为隆重的仪式上和某些公众场所运用有声语言和态势语言就某些问题、某件事件向听众发表意见、讲述见解、讲明事理、宣传主张、抒发感情的信息交流活动。
首先，演讲是演讲者就人们普遍关注的某种有意义的事物或问题，通过口头语言面对一定场合的听众，直接发表意见的一种社会活动。
其次，作文是作者通过文章向读者单方面的输出信息，演讲则是演讲者在现场与听众双向交流信息。严格地讲，演讲是演讲者与听众、听众与听众的三角信息交流，演讲者不能以传达自己的思想和情感、情绪为满足，他必须能控制住自己与听众、听众与听众情绪的应和与交流。所以，为演讲准备的稿子就具有以下六个特点：
主要特点
第一：针对性。演讲是一种社会活动，是用于公众场合的宣传形式。它为了以思想、感情、事例和理论来晓喻听众，打动听众，“征服”群众，必须要有现实的针对性。所谓针对性，首先是作者提出的问题是听众所关心的问题，评论和论辨要有雄辩的逻辑力量，要能为听众所接受并心悦诚服，这样，才能起到应有的社会效果；其次是要懂得听众有不同的对象 和不同的层次，而“公众场合”也有不同的类型，如党团集会、专业性会议、服务性俱乐部、 学校、社会团体、宗教团体、各类竞赛场合，写作时要根据不同场合和不同对象，为听众设计不同的演讲内容。
第二：可讲性。演讲的本质在于“讲”，而不在于“演”，它以“讲”为主、以“演”为辅。由于演讲要诉诸口头，拟稿时必须以易说能讲为前提。如果说，有些文章和作品主要通过阅读欣赏，领略其中意义和情味，那么，演讲稿的要求则是“上口入耳”。一篇好的演讲稿对演讲者来说要可讲；对听讲者来说应好听。因此，演讲稿写成之后，作者最好能通过试讲或默念加以检查，凡是讲不顺口或听不清楚之处（如句子过长），均应修改与调整。
第三：鼓动性。演讲是一门艺术。好的演讲自有一种激发听众情绪、赢得好感的鼓动性。要做到这一点，首先要依靠演讲稿思想内容的丰富、深刻，见解精辟，有独到之处，发人深思，语言表达要形象、生动，富有感染力。如果演讲稿写得平淡无味，毫无新意，即使在现场“演”得再卖力，效果也不会好，甚至相反。
第四：整体性　演讲稿并不能独立地完成演讲任务，它只是演讲的一个文字依据，是整个演讲活动的一个组成部分。演讲主体、听众对象、特定的时空条件，共同构成了演讲活动的整体。撰写演讲稿时，不能将它从整体中剥离出来。为此，演讲稿的撰写要注意以下几个方面：
首先，要根据听众的文化层次、工作性质、生存环境、品位修养、爱好愿望来确立选题，选择表达方式，以便更好地沟通。
其次，演讲稿不仅要充分体现演讲者独到、深刻的观点和见解，而且还要对声调的高低、语速的快慢、体态语的运用进行设计并加以注释，以达到最佳的传播效果。
另外，还要考虑演讲的时间、空间、现场氛围等因素，以强化演讲的现场效果。
第五：口语性
口语性是演讲稿区别于其他书面表达文章和会议文书的重要方面。书面性文章无需多说，其他会议文书如大会工作报告、领导讲话稿等，并不太讲究口语性，虽然由某一领导在台上宣读，但听众手中一般也有一份印制好的讲稿，一边听讲一边阅读，不会有什么听不明白的地方。演讲稿就不同了，它有较多的即兴发挥，不可能事先印好讲稿发给听众。为此，演讲稿必须讲究“上口”和“入耳”。所谓上口，就是讲起来通达流利。所谓入耳，就是听起来非常顺畅，没有什么语言障碍，不会发生曲解。具体要做到：
把长句改成适听的短句；
把倒装句改为常规句；
把听不明白的文言词语、成语加以改换或删去；
把单音节词换成双音节词；
把生僻的词换成常用的词；
把容易误听的词换成不易误听的词。
这样，才能保证讲起来朗朗上口，听起来清楚明白。
第六：临场性
演讲活动是演讲者与听众面对面的一种交流和沟通。听众会对演讲内容及时作出反应：或表示赞同，或表示反对，或饶有兴趣，或无动于衷。演讲者对听众的各种反映不能置之不顾，因此，写演讲稿时，要充分考虑它的临场性，在保证内容完整的前提下，要注意留有伸缩的余地。要充分考虑到演讲时可能出现的种种问题，以及应付各种情况的对策。总之，演讲稿要具有弹性，要体现出必要的控场技巧。
主要功能
第一：“使人知”演讲。这是一种以传达信息、阐明事理为主要功能的演讲。它的目的在于使人知道、明白。如美学家朱光潜的演讲《谈作文》，讲了作文前的准备、文章体裁、构思、选材等，使听众明白了作文的基本知识。它的特点是知识性强，语言准确。
第二：“使人信”演讲。这种演讲的主要目的是使人信赖、相信。它从“使人知”演讲发展而来。如恽代英的演讲《怎样才是好人》，不仅告知人们哪些人不是好人，也提出了三条衡量好人的标准，通过一系列的道理论述，改变了人们以往的旧观念。它的特点是观点独到、正确，论据翔实、确凿，论证合理、严密。
第三："使人激”演讲。这种演讲意在使听众激动起来，在思想感情上与你产生共鸣，从而欢呼、雀跃。如美国黑人运动领袖马丁.路德.金的《在林肯纪念堂前的演说》，用他的几个“梦想”激发广大的黑人听众的自尊感、自强感，激励他们为“生而平等”而奋斗。
第四:"使人动”演讲。这比“使人激”演讲进了一步，它可使听众产生一种欲与演讲者一起行动的想法。法国前总统戴高乐在二战期间的英国伦敦作的演讲《告法国人民书》，号召法国人民行动起来，投身反法西斯的行列。它的特点是鼓动性强，多以号召、呼吁式的语言结尾。
第五、“使人乐”演讲。这是一种以活跃气氛、调节情绪，使人快乐为主要功能的演讲，多以幽默、笑话或调侃为材料，一般常出现在喜庆的场合。这种演讲的事例很多，人们大都能听到。它的特点是材料幽默，语言诙谐。
区别编辑
讲话稿
是指把为了某一目的，在一定场合下所要讲的话事先用文字有条理的写出来的文稿。换句话说，凡写出来供宣讲或宣扬的书面材料都叫讲话稿，又称“发言稿”。
讲话稿是一个统称，涵盖面较大。它的适用范围，主要是各种会议和一些较庄重、隆重的场合。
分类
按用途、性质来划分，讲话稿主要有以下几种：
（1）开幕词。指比较隆重的大型会议开始时所用的讲话稿。
（2）闭幕词。指较为大型的会议结束时，领导同志所做的要求行的讲话。
（3）会议报告。是指召开大中型会议时，有关领导代表一定的机关进行中心发言时所使用的文稿。
（4）动员讲话。是指在部署重要工作或活动的会议上，有关领导所使用的用于鼓励人们积极开展此项工作或参加此项活动的文稿。
（5）总结性讲话。是指某一事项，或某一活动结束后、有关领导对其进行回顾、概括时所使用的文稿。
（6）指示性讲话。是指有关领导对特定的机关和人员布置的工作、任务、指出希望和要求并规定某些指导原则时使用的文稿。
（7）纪念性讲话。是指有关领导在追忆某一特殊的日子、事件或人物时，所使用的文稿。
特点
讲话稿的特点有：
（1）有强烈的针对性。
（2）有较大的鼓动性。
（3）有一定的通俗性和条理性。
（4）有特定的对象。
区别
演讲稿类属于讲话稿，这要求它遵从讲话稿的一般写作规律，而演讲不同于一般讲话的区别，又决定了演讲稿的独特性：首先，演讲稿更加注重选材立意，在选材上多属主动型，切实根据听众的愿望和要求，弄清他们关心和迫切要解决的问题，有的放矢，力求引起最大共鸣。其次，在表达手段上有较多的议论、抒情，将生活中获得的各种体验，由真善美与假丑恶激发起的各种情感，真实地倾泻到演讲稿中，动之以情、晓之以理，具有较强的感召力。再次，在语言的运用上，除了注意口语表达的特点外，如多用短句，少用长句，语言节奏感强，还应适当运用幽默、双关、反语等修辞手法，以达到在与现场听众的交流中，牢牢吸引听众的注意力，为顺利实现演讲目的作好准备。
通过上面分析，我们可以看出无论是写作要求，实现目的以及所达到的效果，讲话稿都不等于演讲稿。在实际写作中，应力图体现二者的区别，不要将它们混为一体。
格式编辑
确定讲题
1．根据演讲活动的性质与目的来确立讲题
所谓讲题，就是演讲的中心话题。演讲稿的撰写必须在一个有社会或科学价值、有现实意义或学术意义的特定问题中展开，否则，将是无的放矢。
演讲者总是根据演讲的性质、目的来确定选题的。若被邀请作学术演讲，就应该介绍自己最新的研究成果或自己掌握的最新的学术信息，这样的话题才最具学术性。如果是在思想教育性的演讲活动上作演讲，就应该针对现实中最新鲜的现象和听众最关心的问题发表见解。就连竞选演说和就职演说，也要能把握住听众的理想和愿望来选题。
2．根据演讲主题与听众情况来选择材料
材料是演讲稿的血肉，所以材料的选择和使用在演讲稿的写作过程中是一个重要的环节。
首先要围绕主题筛选材料。主题是演讲稿的思想观点，是演讲的宗旨所在。材料是主题形成的基础，又是表现主题的支柱。演讲稿的思想观点必须靠材料来支撑，材料必须能充分地表现主题，有力地支持主题。所以，凡是能充分说明、突出、烘托主题的材料就应选用，否则就舍弃，要做到材料与观点的统一。另外，还要选择那些新颖的、典型的、真实的材料，使主题表现得更深刻、更有力。
其次，材料的选择还要考虑到听众的情况。听众的政治素质、社会地位、文化教养，以及心理需求等，都对演讲有制约作用。因而，选用的材料要尽量贴近听众的生活，这样，不仅容易使他们心领神会，而且听起来也会饶有兴味。一般而言，对青少年的演讲应形象有趣，寓理于事，举例要尽量选择他们所崇拜的人和有轰动效应的事；对工人、农民的演讲，要生动风趣、通俗浅显，尽可能列举他们周围的人和发生在他们中间的事作例子。而对知识分子的演讲，使用材料则必须讲究文化层次。
精心安排
不同类型、不同内容的演讲稿，其结构方式也各不相同，但结构的基本形态都是由开头、主体、结尾三部分构成。各部分的具体要求如下：
1．开头要先声夺人，富有吸引力
演讲稿的开头，也叫开场白，它犹如戏剧开头的“镇场”，在全篇中占据重要的地位。
开头的方式主要有如下几种：
①开门见山，亮出主旨。
这种开头不绕弯子，直奔主题，开宗明义地提出自己的观点。如1914年12月2日李卜克内西《在德国国会上反对军事拨款的声明》开头就说：“我投票反对这项提案，理由如下：”。
②叙述事实，交代背景
开头向听众报告一些新发生的事实，比较容易引起人们的注意，吸引听众倾听。如1941年7月3日斯大林《广播演说》的开头：“希特勒德国从6月22日向我们祖国发动的背信弃义的军事进攻，正在继续着。虽然红军进行了英勇的抵抗，虽然敌人的精锐师团和他们的精锐空军部队已被击溃，被埋葬在战场上，但是敌人又从前线调来了生力军，继续向前闯进。……我们的祖国面临着严重的危险。”
③提出问题，发人深思
通过提问，引导听众思考一个问题，并由此造成一个悬念，引起听众欲知答案的期待。如曲啸的《人生理想追求》就是这样开头的：“一个人应该怎样对待自己青春的时光呢？我想在这里同大家谈谈我的情况。”
④引用警句，引出下文
引用内涵深刻、发人深省的警句，引出下面的内容来。如一个大学生的演讲稿，标题叫《我的思考与奋起》，开头就很精彩：“一个人如果一辈子都不曾混乱过，那么他从来就没有思考过。”
开头的方法还有一些，不再一一列举。总之无论采用什么形式的开头，都要做到先声夺人，富于吸引力。
2．主体部分要层层展开，步步推向高潮
演讲稿的主体，要层层展开，步步推向高潮。所谓高潮，即演讲中最精彩、最激动人心的段落。在主体部分的行文上，要在理论上一步步说服听众，在内容上一步步吸引听众，在感情上一步步感染听众。要精心安排结构层次，层层深入，环环相扣，水到渠成地推向高潮。
主体部分展开的方式有以下三种：
①并列式。
并列式就是围绕演讲稿的中心论点，从不同角度、不同侧面进行表现，其结构形态呈放射状四面展开，宛若车轮之轴与其辐条。而每一侧面都直接面向中心论点，证明中心论点。
②递进式。
即从表面、浅层入手，采取步步深入、层层推进的方法，最终揭示深刻的主题，犹如层层剥笋。用这种方法来安排演讲稿的结构层次，能使事物得到由表及里的深入阐述和证明。
③并列递进结合式。
这种结构，或是在并列中包含递进，或是在递进中包含并列。一些纵横捭阖、气势雄伟的演讲稿常采用这种方式。
3．结尾要干脆利落，简洁有力
演讲稿的结尾，是主体内容发展的必然结果。结尾或归纳、或升华、或希望、或号召，方式很多。好的结尾应收拢全篇，卒章显志，干脆利落，简洁有力，切忌画蛇添足，节外生枝。
结构编辑
演讲稿的结构分开头、主体、结尾三个部分，其结构原则与一般文章的结构原则大致一样。
开头
演讲的开头，也叫开场白。它在演讲稿的结构中处于显要的地位，具有特殊的作用。演讲稿的开头，通常有以下几种：
1）开门见山，揭示主题
一般政治性的或者学术性的演讲稿都是开门见山，直接揭示演讲的中心。比如宋庆龄《在接受加拿大维多利亚大学荣誉法学博士学位仪式上的讲话》的开头：“我为接受加拿大维多利亚大学荣誉法学博士学位感到荣幸。”
运用这种方法，必须先明确把握演讲的中心，把要向听众揭示的论点摆出来，使听众一听就知道讲的中心是什么，注意力马上集中起来。但这种方法容易显得过于平淡、冷静，很难吸引人。
2）说明情况，介绍背景。
比如恩格斯《在马克思墓前的讲话》的开头：“三月十四日两点三刻，当代最伟大的思想家停止了思想，……－－但已经永远的睡着了。”
这个开头对事情发生的时间地点人物作出了必要的说明，为进一步向听众揭示论题做准备。运用这种方法开头，一定要从演讲的的中心论点出发，不能信口开河，离题万里，更要防止套话、空话，败坏听者的胃口。
3）提出问题，引起关注。
写演讲稿的开头，可根据听众的特点和演讲的内容，提出一些激发听众思考的问题，以引起听众的兴趣。这种问题应该新颖、独特，确实能促使听众去思考。
主体
演讲稿在开头后要迅速转入主体，这是演讲的正文和核心部分，也是演讲稿的高潮所在，能否写好，直接关系到演讲的质量和效果，内容的安排，应注意以下几个问题。
1）确定结构形式。演讲稿的形式比较活泼，或旁征博引、剖析事理，或引经据典、挥洒自如，或层层深入、或就事论事。结构形式不管怎么样变化，都要求内容突出、问题说透、推理严密、层次清晰、情理交融。
2）认真组织好材料。演讲稿的理论依据和事实论据的组织安排要适当。首先必须保证例证的真实性、典型性。演讲稿不能太长，一般30分钟左右最好。内容要求言简意赅、起到画龙点睛的作用。
3）构筑演讲高潮
一个成功的演讲，不可能没有高潮。要体现三个特点：一思想深刻、态度明确，最集中体现演讲者的思想观点。二是感情强烈，演讲者的爱恶、喜怒在这里得到尽情宣泄。三是语句精炼。
如何构筑演讲高潮呢？
首先要注重思想感情的升华。必须在对某个问题有较为深刻全面的分析、论证，演讲者的思想倾向要逐渐明朗，听众也能逐渐领会演讲者的思想观点，并有可能在与演讲者的思想感情产生共鸣，从而构筑高潮。
其次要注意语言的锤炼，使用排比反问等句式增加气势、也可借助名言警句把思想揭示得更深刻。
结尾
结尾时演讲内容的自然结尾，是演讲稿的有机组成部分。结尾给听众的印象，往往将代表整个演讲给听众的印象。言简意赅、余音绕梁、能够使听众精神振奋，并促使听众不断思考和回味。
写结尾时常犯的毛病就是要么草草收兵、要么画蛇添足，要么就是套用陈词滥调，更有些人在本来已经讲完后，又唠叨几句“我讲的不好、请大家批评指正”之类的话，势必让人反感。 演讲稿的结尾没有固定的格式，或对整个演讲全文要点进行简单小结，或以号召性、鼓动性的话收尾，或者以诗文名言以及幽默俏皮的话结尾。但一般原则是要给听众留下深刻的印象。
结尾的结构：引导式，希望式，感慨式和抒情式。
开场白编辑
内容
1、 楔子。用几句诚恳的话同听众建立个人间的关系，获得听众的好感和信任；
2、衔接。直接 地反映出一种形势，或是将要论及的问题，常用某一件小事，一个比喻，个人经历，轶事传 闻，出人意外的提问，将主要演讲内容衔接起来；
3、激发。可以提出一些激发听众思维的 问题，把听众的注意力集中到演讲中来；
4、触题。一开始就告诉听众自己将要讲些什么。 世界上许多著名的政治家、作家和国家领导人的演讲都是这样的。
主要方法
演讲稿的开头有多种方法，通常用的主要有：
1．开门见山，提示主题。这种开头是一开讲，就进入正题，直接提示演讲的中心。例 如宋庆龄《在接受加拿大维多利亚大学荣誉法学博士学位仪式上的讲话》的开头：“我为接受加拿大维多利亚大学荣誉法学博士学位感到荣幸。”运用这种方法，必须先明晰地把握演讲的中心，把要向听众提示的论点摆出来，使听众一听就知道讲的中心是什么，注意力马上集中起来。
2．介绍情况，说明根由。这种开头可以迅速缩短与听众的距离，使听众急于了解下文。在1814年生于萨尔茨维德尔。她的父亲冯·威斯特华伦男爵在特利尔城时和马克思一家很亲近；两家人的孩子在一块长大。当马克思进大学的时候，他和自己未来的妻子已经知道他们的生命将永远地连接在一起了。”这个开头对发生的事情、人物对象作出必要的介绍和说明，为进一步向听众提示论题作了铺垫。
3．提出问题，引起关注。这种方法是根据听众的特点和演讲的内容，提出一些激发听 众思考的问题，以引起听众的注意。例如弗雷德里克·道格拉斯1854年7月4日在美国纽约州罗彻斯特市举行的国庆大会上发表的《谴责奴隶制的演说》，一开讲就能引发听众的 积极思考，把人们带到一个愤怒而深沉的情境中去：“公民们，请恕我问一问，今天为什么 邀我在这儿发言？我，或者我所代表的奴隶们，同你们的国庆节有什么相干？《独立宣言》 中阐明的政治自由和生来平等的原则难道也普降到我们的头上？因而要我来向国家的祭坛奉 献上我们卑微的贡品，承认我们得到并为你们的独立带给我们的恩典而表达虔诚的谢意么？” 除了以上三种方法，还有释题式、悬念式、警策式、幽默式、双关式、抒情式等。</string>

</resources>
