<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pay_center_white_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/pay_center_blue">

        <ImageView
            android:id="@+id/iv_pay_input_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/com_lenovo_lsf_pay_back_btn_vb_center_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pay_card_limit_title"
            android:textColor="@color/pay_center_white_bg"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pay_card_input_warning"
        android:lines="1"
        android:paddingStart="16dp"
        android:paddingTop="3dp"
        android:paddingEnd="16dp"
        android:paddingBottom="3dp"
        android:text="@string/pay_card_input_warning"
        android:textColor="@color/pay_center_red"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_card_input_limit"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/pay_center_gray"
            />
        <TextView
            android:id="@+id/tv_input_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="500"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:textColor="@color/pay_center_blue"
            />

        <TextView
            android:id="@+id/tv_input_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="序列号或密码错误"
            android:textColor="@color/pay_center_red"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/corner_white_3_stroke_bg"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_card_number"
                android:textColor="@color/pay_card_input_text"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pay_card_number_hint"
                android:textColor="@color/pay_card_input_text"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_white_3_stroke_bg"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_card_passwd"
                android:textColor="@color/pay_card_input_text"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/et_card_passwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pay_card_passwd_hint"
                android:textColor="@color/pay_card_input_text"
                android:textSize="14sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_input_immediate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="44dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_card_input_immediate"
            android:textColor="@color/pay_center_white_bg"
            android:background="@drawable/corner_blue_3_bg"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_input_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start|bottom"
        android:padding="16dp"
        android:textColor="@color/pay_center_gray"
        android:textSize="11sp" />
</LinearLayout>