<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pay_center_white_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/pay_center_blue"
        >
        <ImageView
            android:id="@+id/iv_pay_card_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/com_lenovo_lsf_pay_back_btn_vb_center_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pay_card_limit_title"
            android:textColor="@color/pay_center_white_bg"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pay_center_gray"
        android:lines="1"
        android:layout_margin="16dp"
        android:textSize="14sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pay_card"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/pay_card_limit_hint"
        android:textColor="@color/pay_center_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_card_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/pay_card_next"
        android:textColor="@color/pay_center_white_bg"
        android:background="@drawable/corner_blue_3_bg"
        android:textSize="18sp" />
</LinearLayout>