<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/corner_coupon_gray_3_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <TextView
            android:id="@+id/tv_pay_rmb_cny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pay_rmb_cny"
            android:textColor="@color/pay_center_blue"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="-6dp"
            android:layout_toRightOf="@id/tv_pay_rmb_cny"
            android:text="6"
            android:textColor="@color/pay_center_blue"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_coupon_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_payment"
            android:layout_marginTop="3dp"
            android:text="无使用门槛"
            android:textColor="@color/pay_center_gray"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_coupon_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coupon_rule"
            android:layout_marginTop="6dp"
            android:drawableEnd="@drawable/ic_pay_coupon_details"
            android:drawablePadding="3dp"
            android:text="@string/pay_coupon_details"
            android:textColor="@color/pay_center_gray"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_coupon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="优惠券名称"
            android:textColor="@color/pay_center_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_coupon_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coupon_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="2020.03.16-2020.07.16"
            android:textColor="@color/pay_center_gray"
            android:textSize="10sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coupon_name"
            android:layout_alignParentEnd="true">

            <com.example.notificationtest.gameSdk.view.CheckView
                android:id="@+id/cv_coupon_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"
                app:ev_bgColor="@color/pay_center_white_bg"
                app:ev_checkedColor="@color/pay_center_blue"
                app:ev_size="18dp"
                app:ev_strokeColor="@color/pay_center_gray"
                app:ev_strokeWidth="1dp"
                app:ev_type="1" />

            <TextView
                android:id="@+id/tv_coupon_unuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_coupon_unuse"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:text="@string/pay_coupon_unuse"
                android:textColor="@color/pay_center_red"
                android:textSize="10sp" />
        </FrameLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_coupon_details_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_payment"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_coupon_warning"
        android:drawablePadding="3dp"
        android:text="无使用门槛"
        android:textColor="@color/pay_center_gray"
        android:textSize="10sp" />

</LinearLayout>